--- a/yoyodyne/DIR/com/ost/timekeeper/model/package.html
+++ b/yoyodyne/DIR/com/ost/timekeeper/model/package.html
@@ -13,7 +13,7 @@
 </head>
 <body bgcolor="white">
 
-Oggetti dimodello, per la gestione dei dati.
+Oggetti di modello, per la gestione dei dati e la loro persistenza.
 
 
 <!-- Mettere @see e @since tags qui di seguito. -->
