rimozione caratteri accentati

--- a/swdev/common/src/java/com/davidecavestro/common/gui/persistence/package.html
+++ b/swdev/common/src/java/com/davidecavestro/common/gui/persistence/package.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body bgcolor="white">
-Implementa il supporto alla persistenza di determninate proprietà dell'UI.
+Implementa il supporto alla persistenza di determninate proprieta' dell'UI.
 
 
 <!-- Mettere @see e @since tags qui di seguito. -->
