--- a/swdev/common/src/java/com/davidecavestro/common/package.html
+++ b/swdev/common/src/java/com/davidecavestro/common/package.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body bgcolor="white">
-Packages condivisi tra più applicazioni.
+Packages condivisi tra piu' applicazioni.
 
 
 <!-- Mettere @see e @since tags qui di seguito. -->
