--- a/swdev/common/src/java/com/davidecavestro/common/util/package.html
+++ b/swdev/common/src/java/com/davidecavestro/common/util/package.html
@@ -5,7 +5,7 @@
 </head>
 <body bgcolor="white">
 
-Classi di utilità generica.
+Classi di utilita' generica.
 
 
 <!-- Mettere @see e @since tags qui di seguito. -->
