--- a/swdev/jtimekeeper/light/deploy/license-contents/license/license.html
+++ b/swdev/jtimekeeper/light/deploy/license-contents/license/license.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <title>License</title>
+    <title>JTTS License</title>
   </head>
   <body>
   
 
-<h3>JTTS License:</h3>
+<h2>JTTS License:</h2>
 
 Redistribution and use in binary form, without modification, are permitted provided that the following conditions are met:
 
