--- a/timekeeperlight/deploy/help/help-contents/html/progressestable.html
+++ b/timekeeperlight/deploy/help/help-contents/html/progressestable.html
@@ -7,33 +7,25 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20060130;23273800">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10332000">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20071231;12044200">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Tabella delle azioni</H1>
-<P>La tabella delle azioni permette la visualizzazione e la modifica
-delle azioni dedicate ad un'attivit&agrave; .</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Progresses table</H1>
+<P>From the progresses table you can view and edit task actions.</P>
 <P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 14.76cm; height: 8.97cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/progressestable.gif" NAME="graphics1" ALIGN=LEFT WIDTH=558 HEIGHT=323 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: La tabella delle azioni</I></FONT></FONT></P>
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/progressestable.gif" NAME="graphics1" ALIGN=LEFT WIDTH=558 HEIGHT=339 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+	1: the actions table</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P>Essa elenca una riga per ogni azione associata all'attivit&agrave;
-correntemente selezionata sull'albero di sinistra.</P>
-<P>Per ogni azione sono disponibili diverse informazioni, quali la
-durata, l'ora di inizio, quella di fine ed eventuali annotazioni
-aggiuntive.</P>
-<P>Cliccando sull'intestazione della colonna si cambia l'ordinamento
-delle righe in base ai valori presenti sulla colonna. Un secondo
-click inverte il senso di ordinamento. Il terzo lo rimuove.</P>
-<P>Premendo la combinazione di tasti CTRL-F &egrave; possibile
-effettuare una ricerca all'interno dei valori della tabella.</P>
-<P>Con il tasto F3 ci si sposta da un valore ricercato all'altro.</P>
+<P>It shows a row for every action that belongs to the task currently
+selected on the task tree (left side of the window).</P>
+<P>The table columns show you the duration, the start time, end time
+and notes for every action.</P>
+<P>To sort the rows on a certain column, click on the column header.
+Click a second time to revert the sorting, and a third time to remove
+the sorting.</P>
+<P>Use CTRL-F to search within the notes column.</P>
+<P>Use F3 to move the selection from the current match and the next.</P>
 <P><BR><BR>
 </P>
 </BODY>
