--- a/timekeeperlight/deploy/help/help-contents/html/mainpanel.html
+++ b/timekeeperlight/deploy/help/help-contents/html/mainpanel.html
@@ -7,54 +7,45 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071224;20053500">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10343300">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20071231;11440600">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Pannello principale</H1>
-<P>Il pannello principale &egrave; la parte pi&ugrave; estesa
-dell'applicazione e consente di accedere a due viste:</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Main panel</H1>
+<P>The main panel is the widest part of the window, and provides two
+views:</P>
 <UL>
-	<LI><P>la <A HREF="progressestable.html">tabella delle azioni</A></P>
-	<LI><P>il <A HREF="#Grafico a torta|outline">grafico a torta</A></P>
+	<LI><P>the <A HREF="progressestable.html">actions table</A></P>
+	<LI><P>the <A HREF="#Grafico a torta|outline">donut chart</A></P>
 </UL>
-<P>E' possibile scegliere tra una delle due viste cliccando sulle
-etichette poste su lato destro.</P>
-<P>Selezionando l'etichetta <B>Azioni</B> viene visualizzata la
-tabella contenente l'elenco delle azioni.</P>
+<P>Click on the tabs on the right side to switch view.</P>
+<P>To see the actions list table, click on the <B>Actions</B> tab.</P>
 <P><BR><BR>
 </P>
 <P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 17.73cm; height: 6.77cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_table.gif" NAME="graphics1" ALIGN=LEFT WIDTH=616 HEIGHT=311 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: Pannello principale su &quot;Azioni&quot;</I></FONT></FONT></P>
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_table.gif" NAME="graphics1" ALIGN=LEFT WIDTH=670 HEIGHT=257 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+	1: Main panel switched to&quot;Actions&quot;</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P>Lo sfondo della tabella lascia intravvedere il grafico. In caso di
-problemi &egrave; possibile disabilitare la visualizzazione del
-grafico sullo sfondo tramite la voce del men&ugrave;
-<B>|Visualizza|Mostra l'ombra del grafico|</B></P>
-<H2><A NAME="pie_chart"></A><A NAME="Grafico a torta|outline"></A>Grafico
-a torta</H2>
-<P><SPAN STYLE="font-weight: medium">Cliccando sull'etichetta </SPAN><B>Grafici</B>
-la tabella scompare e <SPAN STYLE="font-weight: medium">viene
-visualizzato solamente il grafico a torta.</SPAN></P>
+<P>By default, the table background lets you see the donut chart. To
+disable this feature click on the <B>|View|Show chart shadow|</B><SPAN STYLE="font-weight: medium">
+menu item.</SPAN></P>
+<H2><A NAME="pie_chart"></A>Donut chart</H2>
+<P><SPAN STYLE="font-weight: medium">Click on the </SPAN><B>Charts</B>
+tab to leave the actions table and see only the donut chart<SPAN STYLE="font-weight: medium">.</SPAN></P>
 <P><BR><BR>
 </P>
 <P><SPAN ID="Frame2" DIR="LTR" STYLE="float: left; width: 17.36cm; height: 6.69cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=LEFT WIDTH=617 HEIGHT=280 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	2: Pannello principale su &quot;Grafico&quot;</I></FONT></FONT></P>
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=RIGHT WIDTH=656 HEIGHT=253 BORDER=0><BR CLEAR=RIGHT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+	2: Main panel switched to&quot;Charts&quot;</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P STYLE="font-weight: medium">Esso rappresenta la durata delle
-azioni appartenenti all'attivit&agrave; correntemente selezionata
-nell'albero o a sotto-attivit&agrave;.</P>
-<P STYLE="font-weight: medium">Ogni livello del grafico rappresenta
-un livello di sotto-attivit&agrave;.</P>
-<P STYLE="font-weight: medium">Passando con il mouse sopra ad un'area
-del grafico vengono visualizzate delle informazioni aggiuntive.</P>
+<P STYLE="font-weight: medium">The chart represents the duration of
+the actions that belong to the currently selected task or its
+sub-tasks.</P>
+<P STYLE="font-weight: medium">Every chart level represents a
+sub-tasks level.</P>
+<P STYLE="font-weight: medium">To see some additional info regarding
+a chart area, leave move the mouse on it.</P>
 <P><BR><BR>
 </P>
 </BODY>
