--- a/timekeeperlight/deploy/help/help-contents/html/report.html
+++ b/timekeeperlight/deploy/help/help-contents/html/report.html
@@ -7,60 +7,47 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;19540300">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10262500">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20080103;10235100">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>I report</H1>
-<P>Per generare report accedere al men&ugrave; <B>|File|Stampa|</B>.
-Viene visualizzato il Pannello dei report dal quale &egrave;
-possibile:</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Reporting</H1>
+<P>To generate a report open the reports panel from menu
+<B>|File|Reporting|</B>. From the reports panel yu can :</P>
 <UL>
-	<LI><P><A HREF="#Scegliere il report da lanciare|outline">scegliere
-	il report da lanciare</A></P>
-	<LI><P><A HREF="#Limitare il report ad un sottoalbero|outline">limitare
-	il report ad un sottoalbero</A></P>
-	<LI><P><A HREF="#Filtrare il report ad un periodo temporale|outline">filtrare
-	il report ad un periodo temporal</A>e</P>
+	<LI><P><A HREF="#Scegliere il report da lanciare|outline">choose the
+	report to launch</A></P>
+	<LI><P><A HREF="#Limitare il report ad un sottoalbero|outline">filter
+	data to a subtree</A></P>
+	<LI><P><A HREF="#Filtrare il report ad un periodo temporale|outline">filter
+	data to a temporal interval</A></P>
 </UL>
-<P>Dopo aver impostato impostato le opzioni desiderate, premere il
-pulsante <B>Conferma</B> per visualizzare l'anteprima del report.</P>
-<P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 8.52cm; height: 11.22cm; border: none; padding: 0cm; background: #ffffff">
+<P>Then press the confirm button to view the report preview.</P>
+<P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 7.75cm; height: 11.89cm; border: none; padding: 0cm; background: #ffffff">
 	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/reportspanel.gif" NAME="graphics1" ALIGN=LEFT WIDTH=288 HEIGHT=422 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: Il pannello di lancio report</I></FONT></FONT></P>
+	1:the report launch panel</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P>Dalla finestra di anteprima &egrave; possibile navigare nelle
-pagine del report, lanciare una stampa, oppure salvare il report nei
-formati PDF, RTF, HTML , XLS, CSV o XML.</P>
-<H2><A NAME="Scegliere il report da lanciare|outline"></A>Scegliere
-il report da lanciare</H2>
-<P>Sono disponibili due report:</P>
+<P>From the preview window you can navigate through the report
+contents, print, or save the report in the following formats PDF,
+RTF, HTML , XLS, CSV or XML.</P>
+<H2>Choose the report</H2>
+<P>You can choose from two reports:</P>
 <UL>
-	<LI><P ALIGN=LEFT>il <B>dettaglio giornaliero attivit&agrave;</B>:
-	mostra l'elenco delle azioni raggruppate per giorno e per attivit&agrave;,
-	ordinate per giorno, nome attivit&agrave; e ora di inizio. E' utile
-	per rendicontare o controllare il lavorato giornaliero.</P>
-	<LI><P ALIGN=LEFT>la <B>lista giornaliera azioni</B>: mostra
-	l'elenco delle azioni raggruppate per giorno e ordinate per giorno e
-	ora di inizio. Pu&ograve; servire per controllare se nell'arco della
-	giornata sono rimasti dei “buchi”.</P>
+	<LI><P ALIGN=LEFT>the <B>daily task detail</B>: shows a list of
+	actions grouped by day and task, and sorted by day, task name and
+	start time. You can use it to check your daily work.</P>
+	<LI><P ALIGN=LEFT>the <B>daily actions list</B>: shows a list of
+	actions groups bu day and sorted by day and start time. It is useful
+	to check if you have missed to record some actions.</P>
 </UL>
-<H2><A NAME="Limitare il report ad un sottoalbero|outline"></A>Limitare
-il report ad un sottoalbero</H2>
-<P>Selezionando un'attivit&agrave; dell'albero visualizzato nel
-pannello dei report , i dati del report vengono automaticamente
-limitati all'attivit&agrave; selezionata ed al suo sotto-albero.</P>
-<H2><A NAME="Filtrare il report ad un periodo temporale|outline"></A>Filtrare
-il report ad un periodo temporale</H2>
-<P>Per limitare il report ai dati relativi ad un periodo temporale,
-scegliere uno dei predefiniti, oppure impostare una data di inizio
-e/o di fine.</P>
-<P>Il report lanciato conterr&agrave; solamente i dati appartenenti
-al periodo specificato.</P>
+<H2>Filter data to a subtree</H2>
+<P>To limit report data to a certain task and its subtree, select
+that task in the reports panel task tree.</P>
+<H2>Filter data to a temporal interval</H2>
+<P>You can choose a preset or manually set a start and/or finish date
+to limit report data to a certain temporal interval.</P>
 <P><BR><BR>
 </P>
 </BODY>
