--- a/timekeeperlight/deploy/help/help-contents/html/statusbar.html
+++ b/timekeeperlight/deploy/help/help-contents/html/statusbar.html
@@ -7,28 +7,23 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20060130;23273800">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10382100">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20071231;12262200">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Barra di stato</H1>
-<P>La barra di stato contiene informazioni relative allo stato
-attuale dell'applicazione.</P>
-<P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 21.63cm; height: 1.27cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/statusbar.gif" NAME="graphics1" ALIGN=LEFT WIDTH=817 HEIGHT=21 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: La barra di stato</I></FONT></FONT></P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Status bar</H1>
+<P>in the status bar you can see the actual application status.</P>
+<P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 14.16cm; height: 0.61cm; border: none; padding: 0cm; background: #ffffff">
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/statusbar.gif" NAME="graphics1" ALIGN=LEFT WIDTH=535 HEIGHT=23 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+	1: the status bar</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P>La casella sul lato sinistro indica lo <I>stato del timer</I> che
-traccia la durata dell'azione in corso.</P>
-<P>La casella nell'angolo destro indica l'attivit&agrave; selezionata
-nell'albero ed il numero di azioni di cui si compone..</P>
-<P>Quando l'applicazione sta effettuando delle operazioni lunghe (ad
-esempio l'importazione di un grosso progetto dalla rete) compare al
-centro della barra di stato una barra di progressione che indica
-l'operazione in corso.</P>
+<P>The label on the left side shows the <I>timer status</I>. This
+means that when you start an action the label changes form <I>IDLE</I>
+to <I>RUNNING</I>.</P>
+<P>The right-most label shows the selected task and its actions
+number.</P>
+<P>When the application starts a long operation (for example,
+importing a huge workspace from a LAN) there is a progress bar on the
+center of the status bar.</P>
 </BODY>
 </HTML>
