--- a/timekeeperlight/deploy/help/help-contents/html/task.html
+++ b/timekeeperlight/deploy/help/help-contents/html/task.html
@@ -7,79 +7,63 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;11052100">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;9530400">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20080102;19184900">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Attivit&agrave;</H1>
-<P>L'attivit&agrave; &egrave; un impegno o un lavoro per il quale si
-vuole tracciare il tempo dedicato. Essa pu&ograve; essere scomposta
-in sotto-attivit&agrave;.</P>
-<P>Ogni <A HREF="workspace.html">progetto</A> ha inizialmente una
-sola attivit&agrave; associata (l'attivit&agrave; principale), che
-inizialmente ha lo stesso nome del progetto.</P>
-<P>L'attivit&agrave; principale costituisce la radice dell'<A HREF="tasktree.html">albero
-delle attivit&agrave;;</A> il primo livello dell'albero &egrave;
-formato dalle sotto-attivit&agrave; figlie dell'attivit&agrave;
-principale, e cos&igrave; via fino a formare una struttura
-gerarchica. Non ci sono limitazioni sul numero dei livelli
-disponibili.</P>
-<P>Ogni elemento dell'albero delle attivit&agrave; (e quindi per ogni
-attivit&agrave;). pu&ograve; avere delle azioni associate, che
-definiscono il tempo ad esso dedicato.</P>
-<P>Per ogni attivit&agrave; &egrave; possibile effettuare le seguenti
-operazioni:</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Task</H1>
+<P>The task is a job for which you want to record you spend on it. It
+can be decomposed in several sub-tasks.</P>
+<P>Every <A HREF="workspace.html">workspace</A> comes with only one
+task (its main task) and by default it has the same name of the
+workspace.</P>
+<P>The main task is the root of the <A HREF="tasktree.html">task
+tree;</A> the first level of the tree is made up of the root
+sub-tasks, and so on, to form a hierarchical structure. There aren't
+limitations on the number of available levels.</P>
+<P>Every task tree element can have some actions that make its total
+effort .</P>
+<P>For every task you are available the following operations:</P>
 <UL>
-	<LI><P><A HREF="#create_a_task">creare un'attivit&agrave;</A></P>
-	<LI><P><A HREF="#delete_a_task">eliminare un'attivit&agrave;</A></P>
-	<LI><P><A HREF="#rename_a_task">rinominare un'attivit&agrave;</A></P>
-	<LI><P><A HREF="#move_a_task">spostare un'attivit&agrave;</A></P>
+	<LI><P><A HREF="#create_a_task">add a task</A></P>
+	<LI><P><A HREF="#delete_a_task">delete a task</A></P>
+	<LI><P><A HREF="#rename_a_task">rename a task</A></P>
+	<LI><P><A HREF="#move_a_task">move a task</A></P>
 </UL>
-<P>Inoltre &egrave; possibile effettuare le operazioni di
-taglia/copia e incolla.</P>
-<P>Quando si copia un'attivit&agrave;, vengono copiate ricorsivamente
-tutte le sotto-attivit&agrave;, comprese tutte le azioni, tranne
-quella eventualmente in corso.</P>
+<P>You can also cut, copy and paste every task.</P>
+<P>When you copy a task, will be copied recursively every subtask,
+with its respective actions, excluded the current one.</P>
 <P><BR><BR>
 </P>
 <HR>
-<H2><A NAME="create_a_task"></A>Creare un'attivit&agrave;</H2>
-<P>Per creare un'attivit&agrave;, dopo aver selezionato sull'albero
-l'attivit&agrave; padre, utilizzare il men&ugrave; <B>|File|Nuova
-attivit&agrave;|</B>.</P>
-<P>Verr&agrave; aggiunta una nuova sotto-attivit&agrave; in coda a
-quelle gi&agrave; presenti. La nuova attivit&agrave; ha un nome
-predefinito, derivato da quello del padre, ma &egrave; possibile
-cambiarlo anche successivamente usando la funzionalit&agrave; di
-rinomina attivit&agrave;-</P>
-<H2><A NAME="delete_a_task"></A>Eliminare un'attivit&agrave;</H2>
-<P>Per eliminare un'attivit&agrave;, selezionare la voce di men&ugrave;
-<B>|Modifica|Elimina|</B>.</P>
-<BLOCKQUOTE>Attenzione: la rimozione di un'attivit&agrave; comporta
-la rimozione di tutte le sue sotto-attivit&agrave; e delle rispettive
-azioni.</BLOCKQUOTE>
-<H2><A NAME="rename_a_task"></A>Rinominare un'attivit&agrave;</H2>
-<P>Per rinominare un'attivit&agrave;, selezionarla tramite l'albero,
-cliccare con il tasto destro del mouse e scegliere la voce di men&ugrave;
-contestuale <B>Rinomina</B>.</P>
-<H2><A NAME="move_a_task"></A>Spostare un'attivit&agrave;</H2>
-<P>A volte pu&ograve; risultare necessario spostare un'attivit&agrave;,
-per ridare un senso logico all'ordine delle attivit&agrave; stesse,
-oppure semplicemente per riorganizzare l'albero delle attivit&agrave;
-secondo criteri diversi.</P>
-<P>Per spostare un'attivit&agrave;, selezionarla sull'albero, e
-scegliere la voce di men&ugrave; <B>|Modifica|Taglia|</B>.</P>
-<P>Selezionare l'attivit&agrave; di destinazione e scegliere la voce
-di men&ugrave; <B>|Modifica|Incolla|</B>.</P>
-<P>Comparir&agrave; una finestra di dialogo in cui scegliere se:</P>
+<H2><A NAME="create_a_task"></A>Add a task</H2>
+<P>To create a new task under an existing one (so adding a sub-task
+to it), first select the task and choose <B>|File|New task|</B><SPAN STYLE="font-weight: medium">
+from menu</SPAN>.</P>
+<P>The new sub-task will be added after the existing sub-tasks, with
+a predefined name derived from its parent; but you can <A HREF="#rename_a_task">rename</A>
+it later.</P>
+<H2><A NAME="delete_a_task"></A>Delete a task</H2>
+<P>To delete a task choose  <B>|Edit|Delete|</B><SPAN STYLE="font-weight: medium">
+from the menu</SPAN>.</P>
+<BLOCKQUOTE>Warning: when you delete a task, even all its sub-tasks
+and actions will be deleted.</BLOCKQUOTE>
+<H2><A NAME="rename_a_task"></A>Rename a task</H2>
+<P>To rename a task, select it within the task tree, click with the
+right mouse button and choose the <B>Rename</B> contextual menu item.</P>
+<H2><A NAME="move_a_task"></A>Move a task</H2>
+<P>Sometimes it can be useful to move a task, to follow some logical
+ordering of your activities, or simply to reorganize the tree
+according to a different criteria.</P>
+<P>To move a task, select it within the tree and choose <B>|Edit|Cut|</B><SPAN STYLE="font-weight: medium">
+from menu</SPAN>.</P>
+<P>Then select a target task and choose <B>|Edit|Paste|</B>.</P>
+<P>You will have to choose, from a dialog, if you want to:</P>
 <UL>
-	<LI><P>incollare prima dell'attivit&agrave; di destinazione</P>
-	<LI><P>incollare dopo l'attivit&agrave; di destinazione</P>
-	<LI><P>incollare come ultima sotto-attivit&agrave; dell'attivit&agrave;
-	di destinazione.</P>
+	<LI><P>paste before the the selected task</P>
+	<LI><P>paste after the selected task</P>
+	<LI><P>paste as last sub-task of the selected one.</P>
 </UL>
 <P><BR><BR>
 </P>
