--- a/timekeeperlight/deploy/help/help-contents/html/userinterface.html
+++ b/timekeeperlight/deploy/help/help-contents/html/userinterface.html
@@ -7,34 +7,32 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071226;9244800">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10445400">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20080103;9380500">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Interfaccia utente</H1>
-<P>L'applicazione mette a disposizione dell'utente alcune finestre:</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>User interface</H1>
+<P>The application has the following windows:</P>
 <UL>
-	<LI><P>la <A HREF="#Finestra Principale|outline">finestra principale</A></P>
-	<LI><P>il <A HREF="report.html">pannello dei report</A></P>
-	<LI><P>altre finestre minori</P>
+	<LI><P>the <A HREF="#Finestra Principale|outline">main window</A></P>
+	<LI><P>the <A HREF="report.html">reporting panel</A></P>
+	<LI><P>other minor windows</P>
 </UL>
 <P><BR><BR>
 </P>
-<H2><A NAME="Finestra Principale|outline"></A>Finestra Principale</H2>
-<P>La finestra principale costituisce il cuore dell'applicazione.</P>
+<H2>Main window</H2>
+<P>The main window is the heart of the application.</P>
 <P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 17.73cm; height: 8.68cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/mainwindow.gif" NAME="graphics1" ALIGN=LEFT WIDTH=670 HEIGHT=446 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: La finestra principale</I></FONT></FONT></P>
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/mainwindow.gif" NAME="graphics1" ALIGN=LEFT WIDTH=749 HEIGHT=440 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+	1: The main window</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
-<P>Qui di seguito &egrave; rappresentata la struttura della finestra
-principale.</P>
+<P>The following table represents the main window structure.</P>
 <TABLE WIDTH=639 BORDER=1 CELLPADDING=4 CELLSPACING=3 STYLE="page-break-after: avoid">
 	<COL WIDTH=198>
 	<COL WIDTH=414>
 	<TR>
 		<TD COLSPAN=2 WIDTH=623 VALIGN=TOP BGCOLOR="#e6e6e6">
-			<P>Men&ugrave;</P>
+			<P>Menu</P>
 		</TD>
 	</TR>
 	<TR>
@@ -44,25 +42,24 @@ principale.</P>
 	</TR>
 	<TR VALIGN=TOP>
 		<TD WIDTH=198 HEIGHT=179 BGCOLOR="#e6e6e6">
-			<P><A HREF="tasktree.html">Albero delle attivit&agrave;</A></P>
+			<P><A HREF="tasktree.html">Task tree</A></P>
 		</TD>
 		<TD WIDTH=414 BGCOLOR="#e6e6e6">
-			<P><A HREF="mainpanel.html">Pannello principale</A></P>
-			<P>(<A HREF="progressestable.html">Tabella delle azioni</A>/Grafico)</P>
+			<P><A HREF="mainpanel.html">Main panel</A></P>
+			<P>(Actions table/Chart)</P>
 		</TD>
 	</TR>
 	<TR>
 		<TD COLSPAN=2 WIDTH=623 VALIGN=TOP BGCOLOR="#e6e6e6">
-			<P><A HREF="statusbar.html">Barra di stato</A></P>
+			<P><A HREF="statusbar.html">Status bar</A></P>
 		</TD>
 	</TR>
 </TABLE>
 <P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><FONT FACE="Times"><FONT SIZE=3><I>Table
-1: Struttura della finestra principale</I></FONT></FONT></P>
+1: Main window structure</I></FONT></FONT></P>
 <P><BR><BR>
 </P>
-<P>Cliccando sui link in essa riportati verr&agrave; visualizzata la
-relativa guida.</P>
+<P>Click on the links above to view the relevant help.</P>
 <P><BR><BR>
 </P>
 </BODY>
