--- a/timekeeperlight/deploy/help/help-contents/html/workspace.html
+++ b/timekeeperlight/deploy/help/help-contents/html/workspace.html
@@ -7,56 +7,46 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;10492400">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;9520300">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGED" CONTENT="20080103;9504700">
 </HEAD>
-<BODY LANG="it-IT" DIR="LTR">
-<H1>Progetto</H1>
-<P>Il progetto &egrave; un “contenitore” di <A HREF="task.html">attivit&agrave;</A>.</P>
-<P>E' possibile organizzare le attivit&agrave; raggruppandole per
-progetto, in modo da ridurre il numero delle attivit&agrave;
-contemporaneamente disponibili.</P>
-<P>Ogni progetto ha un albero delle attivit&agrave; associato, ogni
-attivit&agrave; pu&ograve; avere delle <A HREF="action.html">azioni</A>.</P>
-<P>Le principali operazioni disponibili per il progetto sono:</P>
+<BODY LANG="en-US" DIR="LTR">
+<H1>Workspace</H1>
+<P>A workspace is a <A HREF="task.html">task</A> container.</P>
+<P>You can organize your tasks grouping them by workspace, to reduce
+the number of task contemporary available.</P>
+<P>Every workspace has a task tree, and every task in the tree can
+have some  <A HREF="action.html">actions</A> associated.</P>
+<P>These are the main operations available on a workspace:</P>
 <UL>
-	<LI><P><A HREF="#create_a_project">creare un progetto</A></P>
-	<LI><P><A HREF="#open_a_project">aprire un progetto</A></P>
-	<LI><P><A HREF="#export_a_project">esportare un progetto</A></P>
-	<LI><P><A HREF="#import_a_project">importare un progetto</A></P>
+	<LI><P><A HREF="#create_a_project">create a workspace</A></P>
+	<LI><P><A HREF="#open_a_project">open a workspace</A></P>
+	<LI><P><A HREF="#export_a_project">export a workspace</A></P>
+	<LI><P><A HREF="#import_a_project">import a workspace</A></P>
 </UL>
 <P><BR><BR>
 </P>
 <HR>
-<H2><A NAME="create_a_project"></A>Creare un progetto</H2>
-<P>L'applicazione viene fornita con un progetto predefinito. E'
-possibile creare altri progetti dal men&ugrave; <B>|File|Nuovo
-progetto|</B><SPAN STYLE="font-weight: medium">.</SPAN></P>
-<H2><A NAME="open_a_project"></A><B>Aprire un progetto</B></H2>
-<P>L'applicazione pu&ograve; utilizzare un solo progetto per volta.
-Per cambiare progetto corrente utilizzare la voce <B>|File|Apri
-progetto|</B> dal men&ugrave; principale.</P>
-<H2><A NAME="export_a_project"></A>Esportare un progetto</H2>
-<P>E' possibile esportare in dati del progetto corrente (compresi
-albero delle attivit&agrave; e relative azioni) dal men&ugrave;
-<B>|File|Esporta progetto|</B>. L'esportazione pu&ograve; risultare
-utile, ad esempio, per effettuare dei backup dei dati, per trasferire
-i dati da un computer ad un altro, etc.</P>
-<H2><A NAME="import_a_project"></A>Importare un progetto</H2>
-<P>Per importare un progetto selezionare il men&ugrave; <B>|File|Importa
-progetto|</B>.</P>
-<P>Nel caso in cui si stia importando un progetto con il medesimo
-nome di uno esistente, verr&agrave; chiesto di scegliere se
-sovrascrivere, importare con un nome diverso o annullare.</P>
-<P>Nel caso di ripristino di un file di backup si pu&ograve;
-sovrascrivere.</P>
-<P>Per utilizzare il progetto importato &egrave; necessario <A HREF="#open_a_project">aprirlo</A>
-</P>
+<H2><A NAME="create_a_project"></A>Create a workspace</H2>
+<P>The application comes with a predefined workspace. You can create
+new workspaces choosing <B>|File|Nuovo workspace|</B><SPAN STYLE="font-weight: medium">
+from the menu</SPAN><SPAN STYLE="font-weight: medium">.</SPAN></P>
+<H2><A NAME="open_a_project"></A><B>Open a workspace</B></H2>
+<P>You cannot use more than one project simultaneously. To change
+workspace, choose <B>|File|Open workspace|</B>.</P>
+<H2><A NAME="export_a_project"></A>Export a workspace</H2>
+<P>You can export current workspace's data (including task tree and
+its actions) choosing <B>|File|Export workspace|</B>. The export
+utility could be useful, for example, to make backup copies of your
+data, to transfer the data from a computer to another, etc.</P>
+<H2><A NAME="import_a_project"></A>Import a workspace</H2>
+<P>To import a workspace, choose <B>|File|Import workspace|</B>.</P>
+<P>If you are importing data from a workspace having the same name of
+an existing one, you will be asked to choose if you want to
+overwrite, import with a different name, or cancel the operation.</P>
+<P>Obviously, in case you are restoring a backup, you can overwrite
+the workspace.</P>
+<P>Then, to access the imported workspace you have to <A HREF="#open_a_project">open</A>
+it.</P>
 <P><BR><BR>
 </P>
 </BODY>
