--- a/timekeeperlight/deploy/help/help-contents/default/html/action.html
+++ b/timekeeperlight/deploy/help/help-contents/default/html/action.html
@@ -7,7 +7,9 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;11304800">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20071231;11255700">
+	<META NAME="CHANGED" CONTENT="20080105;12373900">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
@@ -27,10 +29,9 @@ called the <B>current action</B>.</P>
 <A HREF="progressestable.html">actions table</A>.</P>
 <P>You have several ways to create an action:</P>
 <UL>
-	<LI><P><A HREF="#Avviare un'azione|outline">starting an action</A></P>
-	<LI><P><A HREF="#Aggiungere un'azione|outline">adding an action</A></P>
-	<LI><P><A HREF="#Avviare un clone di azione|outline">starting an
-	action clone</A></P>
+	<LI><P><A HREF="#start_an_action">starting an action</A></P>
+	<LI><P><A HREF="#add_an_action">adding an action</A></P>
+	<LI><P><A HREF="#start_an_action_clone">starting an action clone</A></P>
 </UL>
 <P>Actions can also be edited, deleted; you can cut/copy and paste
 them like every other object.</P>
