--- a/timekeeperlight/deploy/help/help-contents/it/html/mainpanel.html
+++ b/timekeeperlight/deploy/help/help-contents/it/html/mainpanel.html
@@ -7,7 +7,9 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071224;20053500">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10343300">
+	<META NAME="CHANGED" CONTENT="20080106;19172700">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
@@ -28,8 +30,8 @@ tabella contenente l'elenco delle azioni.</P>
 <P><BR><BR>
 </P>
 <P><SPAN ID="Frame1" DIR="LTR" STYLE="float: left; width: 17.73cm; height: 6.77cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_table.gif" NAME="graphics1" ALIGN=LEFT WIDTH=616 HEIGHT=311 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
-	1: Pannello principale su &quot;Azioni&quot;</I></FONT></FONT></P>
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_table.gif" NAME="graphics1" ALIGN=LEFT WIDTH=616 HEIGHT=311 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustrati
+	on 1: Pannello principale su &quot;Azioni&quot;</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
 <P>Lo sfondo della tabella lascia intravvedere il grafico. In caso di
@@ -43,8 +45,8 @@ la tabella scompare e <SPAN STYLE="font-weight: medium">viene
 visualizzato solamente il grafico a torta.</SPAN></P>
 <P><BR><BR>
 </P>
-<P><SPAN ID="Frame2" DIR="LTR" STYLE="float: left; width: 17.36cm; height: 6.69cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=LEFT WIDTH=617 HEIGHT=280 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+<P><SPAN ID="Frame2" DIR="LTR" STYLE="float: left; width: 19.32cm; height: 8.12cm; border: none; padding: 0cm; background: #ffffff">
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=LEFT WIDTH=617 HEIGHT=307 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
 	2: Pannello principale su &quot;Grafico&quot;</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
