--- a/timekeeperlight/deploy/help/help-contents/default/html/mainpanel.html
+++ b/timekeeperlight/deploy/help/help-contents/default/html/mainpanel.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071224;20053500">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20071231;11440600">
+	<META NAME="CHANGED" CONTENT="20080105;12350600">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 </HEAD>
 <BODY LANG="en-US" DIR="LTR">
 <H1>Main panel</H1>
@@ -27,15 +28,15 @@ views:</P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
 <P>By default, the table background lets you see the donut chart. To
-disable this feature click on the <B>|View|Show chart shadow|</B><SPAN STYLE="font-weight: medium">
-menu item.</SPAN></P>
+disable this feature click on the <B>|View|Show chart shadow|</B>
+<SPAN STYLE="font-weight: medium">menu item.</SPAN></P>
 <H2><A NAME="pie_chart"></A>Donut chart</H2>
 <P><SPAN STYLE="font-weight: medium">Click on the </SPAN><B>Charts</B>
 tab to leave the actions table and see only the donut chart<SPAN STYLE="font-weight: medium">.</SPAN></P>
 <P><BR><BR>
 </P>
-<P><SPAN ID="Frame2" DIR="LTR" STYLE="float: left; width: 17.36cm; height: 6.69cm; border: none; padding: 0cm; background: #ffffff">
-	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=RIGHT WIDTH=656 HEIGHT=253 BORDER=0><BR CLEAR=RIGHT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
+<P><SPAN ID="Frame2" DIR="LTR" STYLE="float: left; width: 18.43cm; height: 7.41cm; border: none; padding: 0cm; background: #ffffff">
+	<P STYLE="margin-top: 0.21cm; margin-bottom: 0.21cm"><IMG SRC="images/tabs_chart.gif" NAME="graphics2" ALIGN=LEFT WIDTH=656 HEIGHT=253 BORDER=0><BR CLEAR=LEFT><FONT FACE="Times"><FONT SIZE=3><I>Illustration
 	2: Main panel switched to&quot;Charts&quot;</I></FONT></FONT></P>
 </SPAN><BR CLEAR=LEFT><BR><BR>
 </P>
