--- a/timekeeperlight/deploy/help/help-contents/default/html/report.html
+++ b/timekeeperlight/deploy/help/help-contents/default/html/report.html
@@ -7,14 +7,15 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;19540300">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;10235100">
+	<META NAME="CHANGED" CONTENT="20080106;19122400">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 </HEAD>
 <BODY LANG="en-US" DIR="LTR">
 <H1>Reporting</H1>
 <P>To generate a report open the reports panel from menu
-<B>|File|Reporting|</B>. From the reports panel yu can :</P>
+<B>|File|Reporting|</B>. From the reports panel you can :</P>
 <UL>
 	<LI><P><A HREF="#Scegliere il report da lanciare|outline">choose the
 	report to launch</A></P>
