--- a/timekeeperlight/deploy/help/help-contents/default/html/workspace.html
+++ b/timekeeperlight/deploy/help/help-contents/default/html/workspace.html
@@ -7,7 +7,8 @@
 	<META NAME="AUTHOR" CONTENT="Davide Cavestro">
 	<META NAME="CREATED" CONTENT="20071216;10492400">
 	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
-	<META NAME="CHANGED" CONTENT="20080103;9504700">
+	<META NAME="CHANGED" CONTENT="20080106;19112300">
+	<META NAME="CHANGEDBY" CONTENT="Davide Cavestro">
 </HEAD>
 <BODY LANG="en-US" DIR="LTR">
 <H1>Workspace</H1>
@@ -15,7 +16,7 @@
 <P>You can organize your tasks grouping them by workspace, to reduce
 the number of task contemporary available.</P>
 <P>Every workspace has a task tree, and every task in the tree can
-have some  <A HREF="action.html">actions</A> associated.</P>
+have some <A HREF="action.html">actions</A> associated.</P>
 <P>These are the main operations available on a workspace:</P>
 <UL>
 	<LI><P><A HREF="#create_a_project">create a workspace</A></P>
@@ -28,8 +29,8 @@ have some  <A HREF="action.html">actions</A> associated.</P>
 <HR>
 <H2><A NAME="create_a_project"></A>Create a workspace</H2>
 <P>The application comes with a predefined workspace. You can create
-new workspaces choosing <B>|File|Nuovo workspace|</B><SPAN STYLE="font-weight: medium">
-from the menu</SPAN><SPAN STYLE="font-weight: medium">.</SPAN></P>
+new workspaces choosing <B>|File|New workspace|</B> <SPAN STYLE="font-weight: medium">from
+the menu.</SPAN></P>
 <H2><A NAME="open_a_project"></A><B>Open a workspace</B></H2>
 <P>You cannot use more than one project simultaneously. To change
 workspace, choose <B>|File|Open workspace|</B>.</P>
